@@ -558,6 +558,7 @@ SetupX()
    mode.warp_on_next_focus = 0;
    mode.warpsticky = 1;
    mode.warpshaded = 1;
+   mode.warpiconified = 0;
    mode.edge_flip_resistance = 15;
    mode.context_ewin = NULL;
    mode.moveresize_pending_ewin = NULL;
@@ -740,7 +741,8 @@ SetupEnv()
    return;
 }
 
-Window MakeExtInitWin(void)
+Window
+MakeExtInitWin(void)
 {
    Display            *d2;
    Window              win;
